--- a/Assets/Scripts/View/Match3.View.asmdef
+++ b/Assets/Scripts/View/Match3.View.asmdef
@@ -2,7 +2,8 @@
     "name": "Match3.View",
     "rootNamespace": "Match3.View",
     "references": [
-        "GUID:188d3e6d968a04591b5fcdd6e197d826"
+        "GUID:188d3e6d968a04591b5fcdd6e197d826",
+        "GUID:739acc6e514b24a56a0bb751e30cd90f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
